hphp/hack/test/typecheck/expression_trees/interpolated_string.php.like_types.exp
File "interpolated_string.php", line 10, characters 7-19:
Unsupported syntax for expression trees. (Parsing[1002])
